<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="vc.zoe.treasury.MainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/textViewBarcodeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/label_barcode"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewBarcodeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewBarcodeLabel"
        android:layout_alignBottom="@+id/textViewBarcodeLabel"
        android:layout_alignParentRight="true"
        android:text="@string/not_scanned"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewBarcodeLabel"
        android:layout_marginTop="15dp"
        android:text="@string/label_title"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewTitleValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewTitleLabel"
        android:layout_alignBottom="@+id/textViewTitleLabel"
        android:layout_alignRight="@+id/textViewBarcodeValue"
        android:text="@string/not_scanned"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewFormatLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewTitleLabel"
        android:layout_marginTop="15dp"
        android:text="@string/label_format"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewFormatValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewFormatLabel"
        android:layout_alignBottom="@+id/textViewFormatLabel"
        android:layout_alignRight="@+id/textViewTitleValue"
        android:text="@string/not_scanned"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewPriceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewFormatLabel"
        android:layout_marginTop="15dp"
        android:text="@string/label_price_amazon"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewPriceValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewPriceLabel"
        android:layout_alignBottom="@+id/textViewPriceLabel"
        android:layout_alignRight="@+id/textViewFormatValue"
        android:text="@string/not_scanned"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/buttonPriceTrend"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewPriceValue"
        android:layout_alignRight="@+id/textViewPriceValue"
        android:layout_below="@+id/textViewPriceValue"
        android:layout_marginTop="15dp"
        android:enabled="False"
        android:text="@string/button_price_trend" />

    <TextView
        android:id="@+id/textViewInCollectionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewPriceLabel"
        android:layout_below="@+id/buttonPriceTrend"
        android:layout_marginTop="15dp"
        android:text="@string/label_in_collection"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <CheckBox
        android:id="@+id/checkBoxInCollection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewInCollectionLabel"
        android:layout_alignBottom="@+id/textViewInCollectionLabel"
        android:layout_alignRight="@+id/buttonPriceTrend" />

    <TextView
        android:id="@+id/textViewSimilarItemsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/checkBoxInCollection"
        android:layout_marginTop="15dp"
        android:text="@string/label_similar_items"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewSimiliarItemsValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewSimilarItemsLabel"
        android:layout_alignBottom="@+id/textViewSimilarItemsLabel"
        android:layout_alignRight="@+id/textViewFormatValue"
        android:text="@string/zero"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/buttonScanInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewSimilarItemsLabel"
        android:layout_alignParentBottom="true"
        android:text="@string/button_scan_info" />

    <Button
        android:id="@+id/buttonScanAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buttonScanInfo"
        android:layout_alignRight="@+id/textViewSimiliarItemsValue"
        android:text="@string/button_scan_add" />
    
</RelativeLayout>
